use other base 64 library (for better compatibility w/ Android)